{
  "version": 4,
  "terraform_version": "1.15.1",
  "serial": 8,
  "lineage": "5e4d11c4-4e49-c196-f212-2049d831a5da",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "8080"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-05-10T09:22:59.265-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mern-amazona-project/global/firewalls/mern-amazona-jenkins-fw",
            "log_config": [],
            "name": "mern-amazona-jenkins-fw",
            "network": "https://www.googleapis.com/compute/v1/projects/mern-amazona-project/global/networks/mern-amazona-vpc",
            "priority": 1000,
            "project": "mern-amazona-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mern-amazona-project/global/firewalls/mern-amazona-jenkins-fw",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "jenkins"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "kubernetes",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "3000"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "4000"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "6443"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-05-10T09:22:59.547-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/mern-amazona-project/global/firewalls/mern-amazona-k8s-fw",
            "log_config": [],
            "name": "mern-amazona-k8s-fw",
            "network": "https://www.googleapis.com/compute/v1/projects/mern-amazona-project/global/networks/mern-amazona-vpc",
            "priority": 1000,
            "project": "mern-amazona-project",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mern-amazona-project/global/firewalls/mern-amazona-k8s-fw",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "kubernetes"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260504",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/mern-amazona-project/zones/us-central1-a/disks/mern-amazona-jenkins"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/mern-amazona-project/zones/us-central1-a/instances/mern-amazona-jenkins",
            "instance_id": "2317227067876118044",
            "label_fingerprint": "WWr1Ks68kMA=",
            "labels": {
              "project": "mern-amazona",
              "role": "jenkins"
            },
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCoxIDxCh5LvP+DTJSa0bgTi/qE/Unvuxh2DAgc4189aLXQQDqWySlTykydROZqyFV+BKRcTNRBdQnscg+OrtHj0YLZNLNYLfpiDXg1MggT/VkopJAMzrg+DUfR+znFAwxc9y/chKvP98ovEeu9AmjEm1+V4sdSrJqBOpru2iqnN5pCM2YC8WN8ROhCX2p6djTAxhTiFIvn8pfofe/t4naRjItXmSiWWqrp4F8K6sKUGQ8wKqusIm4+FGBvSjIMbTXV32OnrdNfd9WlDW3LYglOOBQ7SyJZiaURdJXvFTP9QxKIPITEMf5X8ezCDMqBK4jB9R8RJpodN3rhouFlpw/ga5k5uWWYD8ftFJESYpL9utxkHX5e7t6sKH5zpTHS2QZ9QdnZw+wd0suD8vS/xDKiLpxGBW069cq33nc5/BlA24 [...]
            },
            "metadata_fingerprint": "3_Z1TwhmEwI=",
            "name": "mern-amazona-jenkins",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.171.72.165",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/mern-amazona-project/global/networks/mern-amazona-vpc",
                "network_ip": "10.0.1.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/mern-amazona-project/regions/us-central1/subnetworks/mern-amazona-public-subnet",
                "subnetwork_project": "mern-amazona-project"
              }
            ],
            "project": "mern-amazona-project",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/mern-amazona-project/zones/us-central1-a/instances/mern-amazona-jenkins",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "jenkins"
            ],
            "tags_fingerprint": "4l7--0t2PzY=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.main",
            "google_compute_subnetwork.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "k8s_master",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260504",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/mern-amazona-project/zones/us-central1-a/disks/mern-amazona-k8s-master"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/mern-amazona-project/zones/us-central1-a/instances/mern-amazona-k8s-master",
            "instance_id": "6676776653234703900",
            "label_fingerprint": "WbqvIHP58Y0=",
            "labels": {
              "project": "mern-amazona",
              "role": "kubernetes-master"
            },
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCoxIDxCh5LvP+DTJSa0bgTi/qE/Unvuxh2DAgc4189aLXQQDqWySlTykydROZqyFV+BKRcTNRBdQnscg+OrtHj0YLZNLNYLfpiDXg1MggT/VkopJAMzrg+DUfR+znFAwxc9y/chKvP98ovEeu9AmjEm1+V4sdSrJqBOpru2iqnN5pCM2YC8WN8ROhCX2p6djTAxhTiFIvn8pfofe/t4naRjItXmSiWWqrp4F8K6sKUGQ8wKqusIm4+FGBvSjIMbTXV32OnrdNfd9WlDW3LYglOOBQ7SyJZiaURdJXvFTP9QxKIPITEMf5X8ezCDMqBK4jB9R8RJpodN3rhouFlpw/ga5k5uWWYD8ftFJESYpL9utxkHX5e7t6sKH5zpTHS2QZ9QdnZw+wd0suD8vS/xDKiLpxGBW069cq33nc5/BlA24 [...]
            },
            "metadata_fingerprint": "3_Z1TwhmEwI=",
            "name": "mern-amazona-k8s-master",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.45.46.196",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/mern-amazona-project/global/networks/mern-amazona-vpc",
                "network_ip": "10.0.1.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/mern-amazona-project/regions/us-central1/subnetworks/mern-amazona-public-subnet",
                "subnetwork_project": "mern-amazona-project"
              }
            ],
            "project": "mern-amazona-project",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/mern-amazona-project/zones/us-central1-a/instances/mern-amazona-k8s-master",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "kubernetes"
            ],
            "tags_fingerprint": "9EuRlPbJr_M=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.main",
            "google_compute_subnetwork.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "k8s_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260504",
                    "size": 20,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/mern-amazona-project/zones/us-central1-a/disks/mern-amazona-k8s-worker"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/mern-amazona-project/zones/us-central1-a/instances/mern-amazona-k8s-worker",
            "instance_id": "7806809070235356700",
            "label_fingerprint": "CpWK8gfSy64=",
            "labels": {
              "project": "mern-amazona",
              "role": "kubernetes-worker"
            },
            "machine_type": "e2-medium",
            "metadata": {
              "ssh-keys": "ubuntu:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQCoxIDxCh5LvP+DTJSa0bgTi/qE/Unvuxh2DAgc4189aLXQQDqWySlTykydROZqyFV+BKRcTNRBdQnscg+OrtHj0YLZNLNYLfpiDXg1MggT/VkopJAMzrg+DUfR+znFAwxc9y/chKvP98ovEeu9AmjEm1+V4sdSrJqBOpru2iqnN5pCM2YC8WN8ROhCX2p6djTAxhTiFIvn8pfofe/t4naRjItXmSiWWqrp4F8K6sKUGQ8wKqusIm4+FGBvSjIMbTXV32OnrdNfd9WlDW3LYglOOBQ7SyJZiaURdJXvFTP9QxKIPITEMf5X8ezCDMqBK4jB9R8RJpodN3rhouFlpw/ga5k5uWWYD8ftFJESYpL9utxkHX5e7t6sKH5zpTHS2QZ9QdnZw+wd0suD8vS/xDKiLpxGBW069cq33nc5/BlA24 [...]
            },
            "metadata_fingerprint": "3_Z1TwhmEwI=",
            "name": "mern-amazona-k8s-worker",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "136.114.56.192",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/mern-amazona-project/global/networks/mern-amazona-vpc",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/mern-amazona-project/regions/us-central1/subnetworks/mern-amazona-public-subnet",
                "subnetwork_project": "mern-amazona-project"
              }
            ],
            "project": "mern-amazona-project",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/mern-amazona-project/zones/us-central1-a/instances/mern-amazona-k8s-worker",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "kubernetes"
            ],
            "tags_fingerprint": "9EuRlPbJr_M=",
            "zone": "us-central1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.main",
            "google_compute_subnetwork.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/mern-amazona-project/global/networks/mern-amazona-vpc",
            "mtu": 0,
            "name": "mern-amazona-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "mern-amazona-project",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mern-amazona-project/global/networks/mern-amazona-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-05-10T09:23:00.233-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/mern-amazona-project/regions/us-central1/subnetworks/mern-amazona-public-subnet",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "mern-amazona-public-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/mern-amazona-project/global/networks/mern-amazona-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "mern-amazona-project",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/mern-amazona-project/regions/us-central1/subnetworks/mern-amazona-public-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.main"
          ]
        }
      ]
    }
  ]
}